--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">PinyinIME</string>
-    <string name="ime_name">谷歌拼音输入法</string>
-    <string name="ime_settings_activity_name">谷歌拼音输入法设置</string>
+    <string name="app_name">系统输入法</string>
+    <string name="ime_name">系统输入法</string>
+    <string name="ime_settings_activity_name">系统输入法设置</string>
     <string name="inputMethod">输入法</string>
     <!-- version = apk(java) + ime engine + sys dict + [hotlist (TBD)] -->
     <string name="version">1.0.0</string>
@@ -32,7 +32,7 @@
     <string name="setting_switch_key">setting_switch_key</string>
     <string name="setting_advanced_key">setting_advanced_key</string>
 
-    <string name="setting">谷歌拼音输入法设置</string>
+    <string name="setting">系统输入法设置</string>
     <string name="setting_sound_key_title">按键声音</string>
     <string name="setting_vibrate_title">按键震动</string>
     <string name="setting_prediction_title">联想输入</string>
